fix: fixed width of black strap of the card, it was overlaping the card

--- a/frontend/src/styles/DashboardPage.module.css
+++ b/frontend/src/styles/DashboardPage.module.css
@@ -241,7 +241,7 @@
 .blackbar {
     position: absolute;
     top: 40px;
-    width: 100%;
+    width: 95%;
     height: 60px;
     background: #000;
     margin-bottom: 10px;
